objects/Affected_Goal__c.object
<CustomObject>
    <description>Incentive Change Log (ICL) items are used to determine the impact of specific types of changes on Individual Goals. When S&amp;O identifies such an impact and adjusts a Personal Goal as a result, the adjustment is represented as a new Personal Goal with a Proposed Goal Proposal record type (which is hereafter referred to simply as a Proposed Goal). That new Proposed Goal Proposal is associated with all of the ICLs that drove the adjustment.</description>
    <fields>
        <fullName>Change_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is only for developer use. Not added on any layout</description>
        <inlineHelpText>This field is only for developer use. Not added on any layout</inlineHelpText>
        <label>Change Batch</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Incentive_Change_Batch__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Processed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Incentive_Change_Batch__c</referenceTo>
        <relationshipLabel>Affected Goals (Change Batch)</relationshipLabel>
        <relationshipName>Affected_Goals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Record__c</fullName>
        <formula>Incentive_Change_Log__r.Change_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>AG{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Incentive_Change_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incentive Change Batch</label>
        <referenceTo>Incentive_Change_Batch__c</referenceTo>
        <relationshipName>Affected_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Change_Log__c</fullName>
        <label>Incentive Change Log</label>
        <referenceTo>Incentive_Change_Log__c</referenceTo>
        <relationshipName>Affected_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personal_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Goal</label>
        <referenceTo>Personal_Goal__c</referenceTo>
        <relationshipLabel>Affected Goals</relationshipLabel>
        <relationshipName>Affected_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Affected Goal</label>
    <listViews>
        <fullName>Active_Original_Change</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Active Original Change</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Affected Goals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affected Goals</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>